--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header>
         <div class="container">
             <h1>MY SMART KISAN</h1>
+            <img src="images/image02.jpg" alt="description-of-image" width="100" height="100">
+
             <div class="header-options">
                 <div class="language-switch">
                     <label for="language">Language:</label>
@@ -29,7 +31,6 @@
     </header>
     <div class="container">
         <!-- Logo Section -->
-        <a href="images/image02.jpg" download="images"><img src="C:\Users\amc\Downloads\newproject\02\images\image02.jpg" /></a>
 
         <div class="logo-container">
             <a href="index.html">
@@ -41,7 +42,7 @@
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="categories.html">Categories</a></li>
+                <li><a href="categories.html">Filter</a></li>
                 <li><a href="orders.html">Orders</a></li>
                 <li><a href="account.html">Account</a></li>
                 <li><a href="help.html">Help Center</a></li>
@@ -63,16 +64,17 @@
             
             <div class="categories">
                 <div class="category">
-                    <img src="images/rice.jpg" alt="Rice">
+                    <img src="images/image.png" alt="description-of-image" width="100" height="100">
                     <h3>Rice</h3>
                 </div>
                 <div class="category">
-                    <img src="images/vegetables.jpg" alt="Vegetables">
-                    <h3>Vegetables</h3>
+                    <img src="path-to-image" alt="description-of-image" width="desired-width" height="desired-height">
+
+                    <h3>Pulses</h3>
                 </div>
                 <div class="category">
-                    <img src="images/fruits.jpg" alt="Fruits">
-                    <h3>Fruits</h3>
+                    <img src="path-to-image" alt="description-of-image" width="desired-width" height="desired-height">
+                    <h3>Wheat</h3>
                 </div>
             </div>
         </div>
